[package]
edition = "2021"
name = "url-normalizer"
version = "0.1.0"

[dependencies]
anyhow = "*"
derive_more = "*"
futures = "*"
hyper = { version = "*", features = ["http1", "server", "tcp"] }
open = "*"
reqwest = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["macros", "rt"] }
tokio-tungstenite = "*"
tracing = "*"
tracing-subscriber = "*"
websocket-rpc = { path = "../websocket-rpc" }

[dev-dependencies]
serde_json = "*"
