[package]
edition = "2021"
name = "websocket-rpc"
version = "0.1.0"

[dependencies]
futures = "*"
pin-project-lite = "*"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", features = ["raw_value"] }
thiserror = "*"
tokio = { version = "*", features = ["macros", "rt"] }
tokio-tungstenite = "*"
tracing = "*"
